# remote-sensing-analysis

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  lai_finland.ipynb  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: run-tests.yml
config/: __init__.py  areas.py  pipeline.yaml
docs/: research.md
notebooks/: lai_finland.ipynb
scripts/: run_pipeline.py
src/extractors/: sentinel.py
src/metrics/: moisture.py  vegetation.py
src/pipeline/: runner.py
src/processors/: preprocessing.py
src/statistics/: distribution.py
tests/config/: __init__.py  test_areas.py
tests/extractors/: test_sentinel.py
tests/metrics/: __init__.py  test_moisture.py  test_vegetation.py
tests/pipeline/: __init__.py  test_runner.py
tests/processors/: __init__.py  test_preprocessing.py
tests/statistics/: __init__.py  test_distribution.py
