[project]
name = "remote-sensing-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "earthengine-api>=1.5.11",
    "geemap>=0.35.3",
    "jupyterlab>=4.4.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "types-pyyaml>=6.0.12.20250402",
]
