[project]
name = "remote-sensing-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "earthengine-api>=1.5.11",
    "geemap>=0.35.3",
    "httpx>=0.28.1",
    "jupyterlab>=4.4.0",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "rasterio>=1.4.3",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.3.250308",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "types-pyyaml>=6.0.12.20250402",
    "types-seaborn>=0.13.2.20250111",
    "types-tqdm>=4.67.0.20250417",
]
